# ichat

./: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
res/: Makefile.am  Makefile.in
res/images/: Makefile.am  Makefile.in
res/images/loading/: Makefile.am  Makefile.in
res/images/photo/: Makefile.am  Makefile.in
res/images/status/: Makefile.am  Makefile.in
resources/: Makefile.am  Makefile.in  user_info.xml
resources/images/: Makefile.am  Makefile.in
resources/images/loading/: Makefile.am  Makefile.in
resources/images/qqfaces/: Makefile.am  Makefile.in
resources/images/status/: Makefile.am  Makefile.in
resources/sounds/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  ic_button.c  ic_button.h  ic_chat_manager.c  ic_chat_manager.h  ic_client_context.c  ic_data_type.h  ic_input_toolbar.h  ic_loading_panel.c  ic_login_window.c  ic_login_window.h  ic_main_panel.c  ic_status_box.c  ic_text_field.c  ic_toolbar.h
src/client/: Makefile.am  Makefile.in  ic_client_main.c
src/common/: .ic_data_type.h.swp  Makefile.am  Makefile.in  ic_data_type.h
src/gui/: Makefile.am  Makefile.in  ic_button.c  ic_button.h  ic_chat_manager.c  ic_chat_manager.h  ic_chat_window.c  ic_chat_window.h  ic_chatwindow_titlebar.c  ic_chatwindow_titlebar.h  ic_client_context.c  ic_client_context.h  ic_input_toolbar.c  ic_loading_panel.c  ic_loading_panel.h  ic_login_window.c  ic_login_window.h  ic_main_panel.c  ic_main_panel.h  ic_status_box.c  ic_status_box.h  ic_text_field.c  ic_text_field.h  ic_titlebar.c  ic_titlebar.h  ic_toolbar.c  ic_tray_icon.c  ic_tray_icon.h  ic_window_titlebar.c  ic_window_titlebar.h  lwqq_context.c  lwqq_context.h
src/include/: Makefile  Makefile.am  Makefile.in  ic_data_type.h
src/libwebqq/: .queue.h.swp  Makefile.am  Makefile.in  http.c  http.h  info.c  info.h  msg.c  type.h
src/libwebqq/libghttp/: Makefile.am  Makefile.in
src/tools/: Makefile.am  Makefile.in  ic_xml_parser.c  ic_xml_parser.h
